# gridlock-ml

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/processed/: features.csv
docs/: architecture.md
infra/: README.md
infra/apprunner/: apprunner.yaml  deploy.sh
infra/sagemaker/: deploy.py  inference.py  serve_requirements.txt  test_endpoint.py
models/: quantile_models.joblib  xgb_f1_model.joblib
notebooks/: exploration.ipynb
scripts/: compare_runs.py  evaluate_model.py  fetch_data.py  train_model.py  train_quantile.py
src/f1_predictor/: config.py
src/f1_predictor/data/: fetcher.py  schemas.py
src/f1_predictor/explainability/: __init__.py  confidence.py  shap_explainer.py
src/f1_predictor/features/: engineering.py
src/f1_predictor/inference/: predict.py
src/f1_predictor/utils/: logging.py
src/src/f1_predictor/: __init__.py
src/src/f1_predictor/data/: fetcher.py  schemas.py
src/src/f1_predictor/features/: engineering.py
src/src/f1_predictor/inference/: __init__.py  predict.py
src/src/f1_predictor/tracking/: __init__.py  mlflow_tracker.py
src/src/f1_predictor/training/: evaluate.py  train.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_features.py  test_fetcher.py  test_predict.py  test_tracker.py
